# tokamak

./: .Cargo.toml.swp  .gitignore  .gitmodules  .travis.yml  CODING_CONVENTIONS.md  Cargo.toml  DESIGN.md  INTERNAL.md  MODULES.md  README.md  build.rs  reformat.sh  rustfmt.toml
algebra/: Cargo.toml  lib.rs
api/: Cargo.toml  context.rs  df.rs  lib.rs  schema.rs
api/tests/: context_tests.rs  df_tests.rs
codegen/: Cargo.toml  aarch64.rs  block.rs  build.rs  common.rs  context.rs  func.rs  lib.rs  llvm.rs  module.rs  ty.rs  types.rs  value.rs
codegen/tests/: br_tests.rs  func_finder_tests.rs  intrinsics_tests.rs  phi_tests.rs  simple_array_tests1.rs  simple_br_tests.rs
common/: Cargo.toml  dataset.rs  datum.rs  err.rs  func.rs  input.rs  lib.rs  memtable.rs  mm.rs  operator.rs  plan.rs  plugin.rs  random_table.rs  rows.rs  schema.rs  str.rs  types.rs
common/src/: lib.rs  str.rs  types.rs
common/tests/: memtable_tests.rs  plan_tests.rs  random_table_tests.rs  random_tests.rs  rows_tests.rs  schema_tests.rs
default_package/: Cargo.toml  arithm_funcs.rs  lib.rs  math_func.rs  math_funcs.rs
dev-support/: run-all-tests.sh
docs/design/: PACKAGE.md
engine/: Cargo.toml  lib.rs  local_runner.rs  optimizer.rs  parallelizer.rs  planner.rs  provider.rs  query_executor.rs  runner.rs  task.rs
exec/: Cargo.toml  driver.rs  exec_plan.rs  exec_planner.rs  filter.rs  lib.rs  planner.rs  processor.rs  projector.rs  scan.rs  split.rs  storage.rs  types.rs
grammar/: .gitignore  README.md  pom.xml
lib/common/: Cargo.toml  codespan.rs  driver.rs  lib.rs
lib/compiler/: Cargo.toml  incremental.rs  lib.rs  metadata.rs
lib/compiler/hir/: def.rs  def_id.rs  mod.rs  print.rs
lib/driver/: Cargo.toml  lib.rs
lib/errors/: Cargo.toml  emitter.rs  lib.rs  lock.rs  snippet.rs  styled_buffer.rs
lib/parser/: Cargo.toml  abi.rs  ast.rs  ast_printer.rs  attr.rs  codemap.rs  comments.rs  error_handler.rs  lexer.rs  lib.rs  parser-tests.rs  parser.rs  precedence.rs  ptr.rs  symbol.rs  token.rs  tokenstream.rs  ttreader.rs  unicode_chars.rs  visitor.rs
lib/parser/tests/exprs/: block.result  break.fl  break.result  break_label.fl  break_label.result  continue.fl  continue.result  continue_label.fl  fn_call.fl  for_loop.fl  index.result  lambda.fl  lambda.result  loop.fl  loop.result  match.fl  method_call.fl  method_call.result  paren.fl  repeat.fl  return.fl  return.result  tuple.result  tuple_field.fl  tuple_field.result  unsafe_block.fl  vec.fl  vec.result  while.fl  while.result  while_let.fl  while_let.result
lib/parser/tests/items/: const.fl  const.result  const_fn.fl  const_fn.result  const_unsafe_fn.fl  extern_fn.fl  extern_mod.fl  extern_mod.result  fn.fl  static.fl  static.result  type.fl
lib/parser/tests/literals/: string.fl
lib/parser/tests/match/: match.result
lib/parser/util/: thin_vec.rs
lib/repl/: Cargo.toml  directive.rs  lib.rs
lib/session/: Cargo.toml  lib.rs
lib/test-util/: Cargo.toml  lib.rs  util.rs
lib/util/: Cargo.toml  time.rs
llvm-ir/: llvm-ir.cc  llvm-ir.h  llvm-ir.ll
memory/: Cargo.toml  buffer.rs
memutil/: Cargo.toml
memutil/src/: arena.rs  buffer.rs  bytes.rs  lib.rs
memutil/tests/: arena_tests.rs  bytes_tests.rs
optimizer/: Cargo.toml  lib.rs
plan/: Cargo.toml  expr.rs  expr_optimizer.rs  expr_rewriter.rs  lib.rs  node.rs  planner.rs  visitor.rs
resources/platform-intrinsics/: generate_all.sh
rows/: Cargo.toml  fixed_len.rs  lib.rs
sql/: Cargo.toml  lib.rs  types.rs
sql/tests/: types_tests.rs
src/: expr.rs  lib.rs  plan.rs  record_schema.rs  schema.rs  types.rs
src/algebra/: lib.rs
src/api/: Cargo.toml  context.rs  df.rs  lib.rs
src/codegen/: Cargo.toml  arm.rs  block.rs  buffer.rs  build.rs  builder.rs  lib.rs  macros.rs  types.rs  util.rs  value.rs
src/codegen/platform-intrinsics/: generate_all.sh  generator.py
src/codegen/test-ir/: test-ir.cc  test-ir.rs
src/codegen/tests/: branch_tests.rs  func_finder_tests.rs  intrinsics_tests.rs  simple_array_tests1.rs
src/common/: Cargo.toml  build.rs  common_ir.cc  constant.rs  data_type.rs  dataset.rs  err.rs  error.rs  func.rs  input.rs  lib.rs  memtable.rs  mm.rs  mod.rs  page.rs  page_ir.cc  page_ir.h  page_ir_macro.h  page_printer.rs  platform.rs  plugin.rs  random_table.rs  rows.rs  rows_ir.cc  rows_ir.h  rows_ir.rs  rows_ir_macro.h  schema.rs  session.rs  str.rs  string_slice.rs  types.rs
src/common/tests/: memtable_tests.rs  page_tests.rs  random_table_tests.rs  rows_tests.rs
src/data_structures/: Cargo.toml  lib.rs
src/dataframe/: core.rs  mod.rs
src/datasource/: common.rs
src/default_package/: Cargo.toml  arithm_funcs.rs  lib.rs  math_funcs.rs
src/engine/: Cargo.toml  lib.rs  local_runner.rs  runner.rs
src/eval/: interpreter.rs  mod.rs  primitives.rs
src/exec/: Cargo.toml  delim_text_scanner.rs  driver.rs  exec.rs  filter.rs  hash_join.rs  lib.rs  mod.rs  planner.rs  processor.rs  scan.rs  split.rs  task.rs  text_scanner.rs  text_splitter.rs  value_print.rs
src/intrinsics/: mod.rs  sse.rs
src/io/: io_buffer.rs  io_manager.rs  localfs.rs  mod.rs  storage.rs  stream.rs
src/libtc_driver/: Cargo.toml  config.rs  cstore.rs  driver.rs  filesearch.rs  lib.rs  macros.rs  middle.rs  pretty.rs  search_paths.rs  session.rs  target_features.rs
src/libtc_driver/metadata/: csearch.rs  cstore.rs  mod.rs
src/libtc_driver/middle/: cstore.rs  def_id.rs  mod.rs
src/libtc_driver/targets/: linux_base.rs  mod.rs  x86_64_unknown_linux_gnu.rs
src/libtc_driver/ty/: context.rs  mod.rs  sty.rs
src/libtc_driver/util/: common.rs
src/libtc_hir/: Cargo.toml  fold.rs  hir.rs  intravisit.rs  lib.rs  lowerings.rs  util.rs
src/libtc_hir/print/: pprust.rs
src/repl/: Cargo.toml  repl.rs  value_print.rs  value_printer.rs
storage/: Cargo.toml  lib.rs  memtable.rs  random.rs
tests/: expr_tests.rs  interpreter_tests.rs  lib.rs  linux_tests.rs  primitives_tests.rs  record_schema_tests.rs  schema_tests.rs  str_slice_tests.rs  stream_tests.rs  string_slice_tests.rs  tuple_tests.rs
util/: Cargo.toml  boxed.rs  collection.rs  lib.rs  str.rs  tree.rs
(+142 files in other folders)
