[package]

name = "tajo-kernel"
description = "Tajo Data Processing Kernel using Modern Hardware Features"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik@apache.org>" ]
license = "Apache-2.0"
keywords = ["Data Analysis", "Data Processing", "Database"]

build = "build.rs"

[lib]
name = "tajo"
path = "src/lib.rs"

[dependencies.api]
path = "api"
