[package]
name = "api"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik.choi@gmail.com>" ]

[lib]
name = "api"
path = "lib.rs"

[dependencies]
itertools = "0.4.1"
rustc-serialize = "0.3"
uuid = "0.1.17"

[dependencies.common]
path = "../common"

[dependencies.engine]
path = "../engine"

[dependencies.sql]
path = "../sql"