[package]
name = "api"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik.choi@gmail.com>" ]

[lib]
name = "api"
path = "lib.rs"

[dependencies]
bincode = "*"
itertools = "0.4.1"
log = "0.3.3"
rustc-serialize = "0.3.16"
uuid = "0.1.17"

[dependencies.common]
path = "../common"

[dependencies.algebra]
path = "../algebra"

[dependencies.engine]
path = "../engine"

[dependencies.sql]
path = "../sql"