[package]
name = "codegen"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik.choi@gmail.com>" ]

[lib]
name = "codegen"
path = "lib.rs"

[denepdencies]
libc = "*"

[dependencies.llvm-alt]
git = "https://github.com/hyunsik/llvm-rs.git"

[dependencies.common]
path = "../common"

[dependencies.util]
path = "../util"