[package]
name = "plan"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik.choi@gmail.com>" ]

[lib]
name = "plan"
path = "lib.rs"

[dependencies]
itertools = "0.4.1"

[dependencies.algebra]
path = "../algebra"

[dependencies.common]
path = "../common"

[dependencies.default_package]
path = "../default_package"

[dependencies.util]
path = "../util"