[package]
name = "flang_compiler"
version = "0.0.1"
authors = ["Hyunsik Choi <hyunsik.choi@gmail.com>"]

[lib]
name = "flang_compiler"
path = "lib.rs"

[dependencies]
fnv = "1.0.5"
itertools = "0.4.3"
log = "0.3.4"
rustc-serialize = "0.3.22"

common = {path = "../common" }
errors = { path = "../errors" }
parser = { path = "../parser" }
util = { path = "../util" }