[package]
name = "codegen"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik.choi@gmail.com>" ]
build = "build.rs"

[lib]
name = "codegen"
path = "lib.rs"

[denepdencies]
libc = "*"
llvm-sys = "*"

[dependencies.llvm]
path = "../llvm-rust"

[dependencies.common]
path = "../common"

[dependencies.util]
path = "../util"

[dependencies.platform-intrinsics]
path = "../platform-intrinsics"
