[package]
name = "common"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik.choi@gmail.com>" ]
build = "build.rs"

[lib]
name = "common"
path = "lib.rs"

[dependencies]
itertools = "0.4.3"
uuid = "0.1.17"
rand = "0.3.12"
rustc-serialize = "*"

[dependencies.util]
path = "../util"

[build-dependencies]
gcc = "0.3.21"