[package]
name = "engine"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik.choi@gmail.com>" ]

[lib]
name = "engine"
path = "lib.rs"

[dependencies]
itertools = "0.4.3"

[dependencies.common]
path = "../common"

[dependencies.algebra]
path = "../algebra"

[dependencies.default_package]
path = "../default_package"

[dependencies.exec]
path = "../exec"

[dependencies.optimizer]
path = "../optimizer"

[dependencies.plan]
path = "../plan"

[dependencies.sql]
path = "../sql"

[dependencies.storage]
path = "../storage"
