[package]
authors = ["The Tomakam Project Developers"]
name = "tc_driver"
version = "0.0.0"

[lib]
name = "tc_driver"
path = "lib.rs"
crate-type = ["dylib"]

[[bin]]
name = "tc"
path = "lib.rs"

[dependencies]
syntax = { path = "../libsyntax" }
tc_hir = { path = "../libtc_hir" }
llvm   = { path = "../llvm" }

getopts = "0.2.14"
