[package]
authors = ["The Tomakam Project Developers"]
name = "tc_driver"
version = "0.0.0"

[lib]
name = "tc_driver"
path = "lib.rs"
crate-type = ["dylib"]

[[bin]]
name = "tc"
path = "lib.rs"

[dependencies]
syntax = { path = "../libsyntax" }
tc_hir = { path = "../libtc_hir" }
llvm   = { path = "../llvm" }

env_logger = "0.3.2"
getopts = "0.2.14"
log = "0.3.4"
typed-arena = "1.1.0"
rustc-serialize = "0.3.16"
