[package]
name = "repl"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik@apache.org>" ]

[[bin]]
name = "repl"
path = "repl.rs"

[dependencies]
env_logger = "0.3.2"
itertools = "0.4.3"
libc = "*"
llvm-sys = "*"
log = "0.3.5"
rl-sys = "~0.4.1"

[dependencies.common]
path = "../common"

[dependencies.exec]
path = "../exec"

[dependencies.llvm]
path = "../llvm"

[dependencies.plan]
path = "../plan"

[dependencies.parser]
path = "../parser"

[dependencies.syntax]
path = "../libsyntax"
